Fixed Side-scrolling on mobile

--- a/homepage.css
+++ b/homepage.css
@@ -183,19 +183,21 @@ span{
 	}
 
 	.scrollArrow{
-		position: absolute;
-		top: 93vh;
-		left: 47.5vw;
-		border-left: 4px solid var(--white);
-		border-bottom: 4px solid var(--white);
-		width: 4vw; height: 4vw;
-		filter: drop-shadow(0px 0px 5px black);
-		transform: rotate(-45deg);
-		z-index: 20;
+		top: 93.5vh;
+		left: calc(50% - 2vw);
 	}
 
 	.language ,.homepageSecond img{
 		display: none;
+	}
+
+	.homepageMain,
+	.Cards{
+		overflow-x: hidden;	
+	}
+
+	.homepageMain{
+		overflow-y: hidden;
 	}
 }
 
